Bug 248299 - Removing a recipient (an email address) crashes Kmail-mobile
Summary: Removing a recipient (an email address) crashes Kmail-mobile
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-18 22:21 UTC by Sabine Faure
Modified: 2010-12-15 23:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-08-18 22:21:04 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Using the 'X' to delete an email address from the 'Recipients' tab (Composer dialogue) crashes Kmail-mobile.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on the 'Write new email' button
- The Composer appears
- Type in a subject name and a few words in the Composer text editor
- Open the 'Recipients' tab
- Type an email address
- Click on the 'X' at the end of the line edit


Actual Results:  
Kmail-mobile crashes

Expected Results:  
whereas it should not. The email address should be correctly deleted.

However, when relaunched Kmail-mobile restores the email and has in fact deleted the unwanted email address from the Recipients tab successfully.

N900 Packages, Svn Rev 1164728
Comment 1 Felix Wolfsteller 2010-09-02 09:42:46 UTC
Persists on 4:4.5~20100902.1170752-1maemo1.1170522 .
Comment 2 Bernhard E. Reiter 2010-09-02 19:47:59 UTC
on n900 snapshot 20100902.1170752 if you press backspace in the recipient dialog
and delete some characters you can also get a chrash in libkdepim.
Might or might not be related.
Comment 3 Sabine Faure 2010-09-03 00:19:39 UTC
I can still reproduce this bug.
When relaunching Kmail-mobile I noticed that the email title was gone but the email text was still there.

I confirm that pressing backspace to delete some characters from the recipient's email address also crashes Kmail-mobile.
To reproduce hold the backspace key pressed otherwise you may not see it.

N900, 4:4.5~20100902.1171086-1maemo1.1170522
Comment 4 Volker Krause 2010-09-06 17:11:54 UTC
SVN commit 1172149 by vkrause:

Defer deletion a bit, the side-effects of the focus changes can
otherwise trigger a crash when deleting the last line.

BUG: 248299


 M  +2 -1      multiplyinglineview_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172149
Comment 5 Sabine Faure 2010-09-09 23:10:28 UTC
It is corrected now.

The recipient's address can be deleted successfully by using the 'X' or by pressing and holding the backspace key.

N900, 4:4.5~20100909.1173240-1maemo1.1173275
Comment 6 Felix Wolfsteller 2010-09-13 12:02:16 UTC
Can still provoke crashes with version 4:4.5~20100912.1174548-1maemo1.1173569 .
I tried with e.g. four (malformed, like "A B") recipients and deleted e.g. second and third by button press.

While deletion sometimes works, it sometimes crashes (with a sound effect btw). 

Have the impression that pressing the deletion button longer leads to higher possibility of crash.
Comment 7 Till Adam 2010-09-16 09:25:50 UTC
Should be fixed with commit 1175930 to kdelibs. Please confirm
Comment 8 Sabine Faure 2010-09-16 20:12:53 UTC
I confirm that it still works fine for me:

The recipient's address can be deleted successfully by using the 'X' or by
pressing and holding the backspace key.

Felix, feel free to verify as soon as it works for you too.

N900, 4:4.5~20100916.1175939-1maemo1.1174921
Comment 9 Felix Wolfsteller 2010-09-17 09:26:09 UTC
Will verify with next experimental release.
Comment 10 Felix Wolfsteller 2010-09-20 10:42:27 UTC
Confirmed with 4:4.5~20100920.1177273-1maemo1.1174921 (not in experimental, but snapshots).
Comment 11 Sabine Faure 2010-10-01 20:39:03 UTC
I retested this bug today and the results are not conclusive the first couple of times it worked fine but then I tried deleting the second email address with the 'X' and Kmail-mobile crashed.
Since then whenever I click in the recipient's tab to enter an email address Kmail-mobile crashes.

I'll retest next week for now I'll leave it as closed.

N900, 4:4.5~20101001.1181533-1maemo1.1181469
Comment 12 Sabine Faure 2010-10-01 21:02:45 UTC
See bug #252962 for details about Kmail-mobile crashing while trying to add a recipient.

I'll retest this bug once this one is corrected.

N900, 4:4.5~20101001.1181533-1maemo1.1181469
Comment 13 Sabine Faure 2010-12-15 23:55:13 UTC
Indeed it is corrected now.

The recipient's address can be deleted successfully by using the 'X' or by
pressing and holding the backspace key.

N900, 4:4.6~20101215.1206727-1maemo1.1206430