Defer deletion a bit, the side-effects of the focus changes can otherwise trigger a crash when deleting the last line.

BUG: 248299

svn path=/trunk/KDE/kdepim/; revision=1172149